@@ -20,6 +20,9 @@ BEAM_FILES = exmpp.app							\
 	     exmpp_tls.beam						\
 	     exmpp_xml.beam						\
 	     exmpp_xmlstream.beam					\
+	     exmpp_known_nss.beam					\
+	     exmpp_known_elems.beam					\
+	     exmpp_known_attrs.beam					\
 	     exmpp_client_binding.beam					\
 	     exmpp_client_compression.beam				\
 	     exmpp_client_legacy_auth.beam				\
