@@ -18,6 +18,9 @@
 		'@srcdir@/core/exmpp_presence',
 		'@srcdir@/core/exmpp_tls',
 		'@srcdir@/core/exmpp_compress',
+		'@builddir@/exmpp_known_nss',
+		'@builddir@/exmpp_known_elems',
+		'@builddir@/exmpp_known_attrs',
 		'@srcdir@/network/exmpp_session',
 		'@srcdir@/network/exmpp_ssl',
 		'@srcdir@/network/exmpp_tcp',
