@@ -1,0 +1,24 @@
+# $Id$
+
+BEGIN {
+	print "% $Id$";
+}
+
+/^# Generated by/ {
+	print "% " $0 "\n";
+	print "-module(exmpp_known_attrs).\n";
+	print "-export([attr_as_list/1]).\n";
+}
+
+/^[^#]/ {
+	if (!already_processed[$1]) {
+		print "attr_as_list('" $1 "') ->\n    \"" $1 "\";";
+		already_processed[$1] = 1;
+	}
+}
+
+END {
+	print "\nattr_as_list(Attr) when is_atom(Attr) ->";
+	print "    atom_to_list(Attr);";
+	print "attr_as_list(Attr) when is_list(Attr) ->\n    Attr.";
+}
