@@ -1,0 +1,24 @@
+# $Id$
+
+BEGIN {
+	print "% $Id$";
+}
+
+/^# Generated by/ {
+	print "% " $0 "\n";
+	print "-module(exmpp_known_nss).\n";
+	print "-export([ns_as_list/1]).\n";
+}
+
+/^[^#]/ {
+	if (!already_processed[$1]) {
+		print "ns_as_list('" $1 "') ->\n    \"" $1 "\";";
+		already_processed[$1] = 1;
+	}
+}
+
+END {
+	print "\nns_as_list(undefined) ->\n    \"\";";
+	print "\nns_as_list(NS) when is_atom(NS) ->\n    atom_to_list(NS);";
+	print "ns_as_list(NS) when is_list(NS) ->\n    NS.";
+}
